Anonymous | Login | 2021-01-26 05:39 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0030573 | Open CASCADE | [OCCT] OCCT:Foundation Classes | public | 2019-03-14 19:23 | 2019-09-11 11:03 | ||||
Reporter | oan | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | |||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0030573: OSD_Parallel_TBB: limit number of execution threads using settings of OSD_ThreadPool::DefaultPool() | ||||||||
Description | Currently there is no possibility to limit number of execution threads for TBB-based implementation of OSD_Parallel. It is suggested to add tbb::task_scheduler_init to OSD_Parallel::forEach() method for that reason. | ||||||||
Steps To Reproduce | Not required | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | |||||||||
![]() |
||||||||||||||||
|
![]() |
|
(0082962) git (administrator) 2019-03-14 20:12 |
Branch CR30573 has been created by oan. SHA-1: 36a857253ab268115229f824e833d199443c7b25 Detailed log of new commits: Author: oan Date: Thu Mar 14 19:22:04 2019 +0300 0030573: OSD_Parallel_TBB: limit number of execution threads using settings of OSD_ThreadPool::DefaultPool() Add tbb::task_scheduler_init to OSD_Parallel::forEach(). |
(0082973) git (administrator) 2019-03-15 11:51 |
Branch CR30573 has been updated forcibly by oan. SHA-1: dc7e28d61e982adb25c4ace8c97ce3ac7d80fffb |
(0082983) oan (developer) 2019-03-15 13:52 |
Dear Andrey, please review branch CR30573. Test reports: http://occt-tests/CR30573-master-OAN-OCCT/Windows-64-VC14/diff_summary.html [^] http://occt-tests/CR30573-master-OAN-OCCT/Debian80-64/diff_summary.html [^] |
(0083001) git (administrator) 2019-03-15 18:05 |
Branch CR30573 has been updated forcibly by oan. SHA-1: 7e9925efec2dc1cc80662f6054f1b9793e3c121a |
(0083002) msv (developer) 2019-03-15 18:07 |
Reviewed. |
(0083007) apn (administrator) 2019-03-15 19:06 |
Combination - OCCT branch : CR30573 master SHA - dc7e28d61e982adb25c4ace8c97ce3ac7d80fffb d67d4b811012eef8913d3c535c29654d0acf3c4c Products branch : master SHA - 19cf12d4f918562ea1456aa224c6f7a64b9c4ad7 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16594.050000000094 / 16599.24999999996 [-0.03%] Products Total CPU difference: 9122.510000000038 / 9092.71000000004 [+0.33%] Windows-64-VC14: OCCT Total CPU difference: 17988.640625 / 17985.28125 [+0.02%] Products Total CPU difference: 10584.359375 / 10460.953125 [+1.18%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0083075) git (administrator) 2019-03-19 10:32 |
Branch CR30573 has been deleted by inv. SHA-1: 7e9925efec2dc1cc80662f6054f1b9793e3c121a |
![]() |
|||
occt: master e9fb0cba
Timestamp: 2019-03-14 16:22:04 Author: oan Committer: apn [ Details ] [ Diff ] |
0030573: OSD_Parallel_TBB: limit number of execution threads using settings of OSD_ThreadPool::DefaultPool() Add tbb::task_scheduler_init to OSD_Parallel::forEach(). |
||
mod - src/OSD/OSD_Parallel_TBB.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-03-14 19:23 | oan | New Issue | |
2019-03-14 19:23 | oan | Assigned To | => abv |
2019-03-14 20:12 | git | Note Added: 0082962 | |
2019-03-14 21:21 | kgv | Relationship added | related to 0029935 |
2019-03-15 11:51 | git | Note Added: 0082973 | |
2019-03-15 13:52 | oan | Note Added: 0082983 | |
2019-03-15 13:52 | oan | Status | new => resolved |
2019-03-15 13:52 | oan | Steps to Reproduce Updated | View Revisions |
2019-03-15 17:14 | kgv | Assigned To | abv => msv |
2019-03-15 18:05 | git | Note Added: 0083001 | |
2019-03-15 18:07 | msv | Note Added: 0083002 | |
2019-03-15 18:07 | msv | Assigned To | msv => bugmaster |
2019-03-15 18:07 | msv | Status | resolved => reviewed |
2019-03-15 19:06 | apn | Test case number | => Not needed |
2019-03-15 19:06 | apn | Note Added: 0083007 | |
2019-03-15 19:06 | apn | Status | reviewed => tested |
2019-03-17 15:40 | apn | Changeset attached | => occt master e9fb0cba |
2019-03-17 15:40 | apn | Assigned To | bugmaster => apn |
2019-03-17 15:40 | apn | Status | tested => verified |
2019-03-17 15:40 | apn | Resolution | open => fixed |
2019-03-19 10:32 | git | Note Added: 0083075 | |
2019-03-25 14:23 | kgv | Relationship added | child of 0028199 |
2019-09-11 11:03 | oan | Relationship added | parent of 0030959 |
Copyright © 2000 - 2021 MantisBT Team |